[package]
name = "aochelper"
version = "0.2.0"
authors = ["Blair Frandeen <blairfrandeen@protonmail.com>"]
rust-version = "1.77"
readme = "README.md"
repository = "https://github.com/blairfrandeen/aochelper"
edition = "2021"
license = "MIT"
description = "Helper utility to download Advent of Code puzzle inputs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
glob = "0.3.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
rusqlite = "0.30.0"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
